tests/TypingSpec/invalid/types/case-missing-constructor.algst
\(b : Bool) -> case b of {
  True -> (),
}
